deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swordhealth-deployment
  labels:
    app: swordhealth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swordhealth
  template:
    metadata:
      labels:
        app: swordhealth
    spec:
      containers:
      - name: swordhealth
        image: swordhealth/node-example:0.0.1
        ports:
          - containerPort: 3000
