service.yml
apiVersion: v1
kind: Service
metadata:
  name: swordhealth-service
spec:
  selector:
    app: swordhealth
  type: LoadBalancer    
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002
