ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swordhealth-ingress
spec:
  rules:
    - host: a4071adf388414b5d834a94655405ceb-666562026.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swordhealth-service
                port:
                  number: 3000
